user-apps/miscellaneous/fireflyiii/importer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fireflyiii-importer
  labels:
    app: fireflyiii
    tier: importer
spec:
  selector:
    matchLabels:
      app: fireflyiii
      tier: importer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fireflyiii
        tier: importer
        # Added for Cilium network policies
        netpol.cilium.io/egress-to-intra: "true"
        netpol.cilium.io/egress-to-kube-dns: "true"
        netpol.cilium.io/ingress-from-ingress: "true"
    spec:
      containers:
      - image: fireflyiii/data-importer:version-2.3.5
        name: fireflyiii-importer
        ports:
        - containerPort: 8080
          name: fireflyiii
