user-apps/miscellaneous/fireflyiii/importer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fireflyiii-importer
  labels:
    app: fireflyiii
    tier: importer
spec:
  clusterIP: None
  ports:
    - port: 8080
  selector:
    app: fireflyiii
    tier: importer
