user-apps/miscellaneous/fireflyiii/importer/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fireflyiii-importer
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - "budget-importer.tamhomelab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: fireflyiii-importer
          port: 8080
          weight: 1
